--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      eureka:
+        client:
+          register-with-eureka: true
+          fetch-registry: true
 
 spring:
   application:
@@ -12,13 +16,13 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: admin-service
+        - id: api-service
           uri: lb://API-SERVICE
           predicates:
-            - Path=/api-service/**
+            - Path=/api/**
         - id: ui-route
           uri: ${UI_URI}
           predicates:
             - Path=/**
 server:
-  port: 8080
+  port: ${GATEWAY_SERVER_PORT}
