--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,10 +1,11 @@
-server:
-  port: 8090
-
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+      eureka:
+        client:
+          register-with-eureka: true
+          fetch-registry: true
 
 spring:
   application:
@@ -16,10 +17,12 @@ spring:
           enabled: true
       routes:
         - id: api-service
-          uri: dock
+          uri: lb://API-SERVICE
           predicates:
             - Path=/api/**
         - id: ui-route
-          uri: http://localhost:8085
+          uri: http://localhost:3000
           predicates:
             - Path=/**
+server:
+  port: 8090
